--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@
       <div class="col login-item" style="padding: 10px; text-align: end;">
         <!-- <input type="text" id="email" style="" placeholder="email" /> -->
         <!-- Button trigger modal -->
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal"><i
-                    class="fa-solid fa-key"></i></button>
+        <button type="button" id="login_key" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal"><i class='fa-solid fa-right-to-bracket'></i></button>
       </div>
     </nav>
 
