--- a/owner.html
+++ b/owner.html
@@ -60,13 +60,13 @@
         <nav>
             <ul style="display:flex;">
                 <div class="col">
-                    <li class="current"><a
+                    <li><a
                             href="https://script.google.com/a/macros/ikeden.com/s/AKfycbwWy7Iynzb_gMSLQPv2mv9PGdwexz6xH-NYf0sKCrfl8DkRNuZcyyDT343ikA5Lwihi/exec?p=index.html">HOME</a>
                     </li>
                     <li><a
                             href="https://script.google.com/a/macros/ikeden.com/s/AKfycbwWy7Iynzb_gMSLQPv2mv9PGdwexz6xH-NYf0sKCrfl8DkRNuZcyyDT343ikA5Lwihi/exec?p=works.html">WORKS</a>
                     </li>
-                    <li><a
+                    <li class="current"><a
                             href="https://script.google.com/a/macros/ikeden.com/s/AKfycbwWy7Iynzb_gMSLQPv2mv9PGdwexz6xH-NYf0sKCrfl8DkRNuZcyyDT343ikA5Lwihi/exec?p=owner.html">OWNER</a>
                     </li>
                 </div>
@@ -75,8 +75,7 @@
         <div class="col login-item" style="padding: 10px; text-align: end;">
             <!-- <input type="text" id="email" style="" placeholder="email" /> -->
             <!-- Button trigger modal -->
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal"><i
-                    class="fa-solid fa-key"></i></button>
+            <button type="button" id="login_key" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal"><i class='fa-solid fa-right-to-bracket'></i></button>
         </div>
     </div>
     <div class="container">
