--- a/firebase-auth.html
+++ b/firebase-auth.html
@@ -1,7 +1,7 @@
 <script>
   // Firebaseの初期化
     var config = {
-        apiKey: "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX",
+        apiKey: "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX",
         authDomain: "workshop-23257.firebaseapp.com",
     };
     firebase.initializeApp(config);
@@ -72,9 +72,13 @@
             // ログイン認証済
             console.log('auth user', user);
             document.getElementById('state').innerText = 'ログイン済(email: ' + user.email + ')';
-        } else {
+            document.getElementById('login_key').innerHTML = "<i class='fa-solid fa-right-from-bracket'></i>"            
+
+        } else { 
             // No user is signed in.
             document.getElementById('state').innerText = '未ログイン';
+            document.getElementById('login_key').innerHTML = "<i class='fa-solid fa-right-to-bracket'></i>"           
+
         }
     });
 </script>
