--- a/owner.html
+++ b/owner.html
@@ -23,7 +23,7 @@
     <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/2.5.1/firebaseui.css" />
     <?!= HtmlService.createHtmlOutputFromFile('firebase-auth').getContent(); ?>
 
-    <title>IKEDEN WORKSHOP</title>
+    <title>WORKSHOP</title>
 </head>
 
 <!-- Modal -->
@@ -61,13 +61,13 @@
             <ul style="display:flex;">
                 <div class="col">
                     <li><a
-                            href="https://script.google.com/a/macros/ikeden.com/s/AKfycbwWy7Iynzb_gMSLQPv2mv9PGdwexz6xH-NYf0sKCrfl8DkRNuZcyyDT343ikA5Lwihi/exec?p=index.html">HOME</a>
+                            href="https://script.google.com/macros/s/AKfycbwWy7Iynzb_gMSLQPv2mv9PGdwexz6xH-NYf0sKCrfl8DkRNuZcyyDT343ikA5Lwihi/exec?p=index.html">HOME</a>
                     </li>
                     <li><a
-                            href="https://script.google.com/a/macros/ikeden.com/s/AKfycbwWy7Iynzb_gMSLQPv2mv9PGdwexz6xH-NYf0sKCrfl8DkRNuZcyyDT343ikA5Lwihi/exec?p=works.html">WORKS</a>
+                            href="https://script.google.com/macros/s/AKfycbwWy7Iynzb_gMSLQPv2mv9PGdwexz6xH-NYf0sKCrfl8DkRNuZcyyDT343ikA5Lwihi/exec?p=works.html">WORKS</a>
                     </li>
                     <li class="current"><a
-                            href="https://script.google.com/a/macros/ikeden.com/s/AKfycbwWy7Iynzb_gMSLQPv2mv9PGdwexz6xH-NYf0sKCrfl8DkRNuZcyyDT343ikA5Lwihi/exec?p=owner.html">OWNER</a>
+                            href="https://script.google.com/macros/s/AKfycbwWy7Iynzb_gMSLQPv2mv9PGdwexz6xH-NYf0sKCrfl8DkRNuZcyyDT343ikA5Lwihi/exec?p=owner.html">OWNER</a>
                     </li>
                 </div>
             </ul>
@@ -75,7 +75,7 @@
         <div class="col login-item" style="padding: 10px; text-align: end;">
             <!-- <input type="text" id="email" style="" placeholder="email" /> -->
             <!-- Button trigger modal -->
-            <button type="button" id="login_key" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal"><i class='fa-solid fa-right-to-bracket'></i></button>
+            <button type="button" id="login_key" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">　</button>
         </div>
     </div>
     <div class="container">
